--- a/less/common.less
+++ b/less/common.less
@@ -8,3 +8,7 @@ html,body,div,h1,h2,h3,h4,h5,h6,p,span,a,ul,li,input,button,textarea {
 	margin: 0;
 	padding: 0;
 }
+html,body {
+	width: 100%;
+	height: 100%;
+}
