--- a/less/common.less
+++ b/less/common.less
@@ -12,3 +12,16 @@ html,body {
 	width: 100%;
 	height: 100%;
 }
+span {
+	font-weight: bold;
+	font-size: 16px;
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	margin: auto;
+	display: block;
+	height: 18px;
+	text-align: center;
+}
