--- a/less/common.less
+++ b/less/common.less
@@ -1,27 +1,82 @@
 @font-family-1: \5FAE\8EDF\6B63\9ED1\9AD4;
 @font-family-2: \5FAE\8F6F\96C5\9ED1;
 @font-family-3: \534E\6587\7EC6\9ED1;
+@color: #2196f3;
 html,body,div,h1,h2,h3,h4,h5,h6,p,span,a,ul,li,input,button,textarea {
 	font-family: 'PT serif', @font-family-1, @font-family-2, @font-family-3, Microsoft Yahei, Hiragino Sans GB, sans-serif, Arial;
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
 	outline: none;
 	margin: 0;
 	padding: 0;
+	font-size: 62.5%;
 }
 html,body {
 	width: 100%;
 	height: 100%;
 }
-span {
-	font-weight: bold;
-	font-size: 16px;
-	position: absolute;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	margin: auto;
-	display: block;
-	height: 18px;
+::-webkit-scrollbar-track-piece {
+	background: #222222;
+}
+::-webkit-scrollbar {
+	width: 8px;
+	height: 8px;
+}
+::-webkit-scrollbar-thumb {
+	height: 40px;
+	background-color: #999999;
+	&:hover {
+		background-color: #aaaaaa;
+	};
+}
+ul,li {
+	list-style: none;
+}
+li {
+	display: inline-block;
+	padding: 3px 5px;
+}
+a {
+	text-decoration: none;
+	color: @color;
+}
+
+.al {
+	text-align: left;
+}
+.ac {
 	text-align: center;
+}
+.ar {
+	text-align: right;
+}
+
+.create-font-size(@n) when (@n >= 12) {
+	.create-font-size((@n - 2));
+	.f@{n} {
+		font-size: @n * .1rem;
+	}
+}
+.create-font-size(30);
+
+.index {
+	width: 100%;
+	height: 18rem;
+	position: absolute;
+	top: 50%;
+	left: 0;
+	margin-top: -9rem;
+}
+.avatar {
+	width: 10rem;
+	height: 10rem;
+	border-radius: 100%;
+	margin: 0 auto;
+	background: url(../img/avatar.jpg) no-repeat center;
+	background: -webkit-image-set(url(../img/avatar.jpg) 1x,url(../img/avatar@2x.jpg) 2x) no-repeat center;
+	background-size: 100%;
+}
+.master {
+	padding: 1rem 0;
+	margin: 1rem 0;
+	text-transform: capitalize;
 }
