--- a/less/common.less
+++ b/less/common.less
@@ -39,6 +39,16 @@ a {
 	text-decoration: none;
 	color: @color;
 }
+b {
+	width: 100%;
+	height: 2rem;
+	line-height: 2rem;
+	display: block;
+	position: absolute;
+	top: 50%;
+	left: 0;
+	margin-top: -1rem;
+}
 
 .al {
 	text-align: left;
