--- a/less/common.less
+++ b/less/common.less
@@ -3,6 +3,7 @@
 @font-family-2: \5FAE\8F6F\96C5\9ED1;
 @font-family-3: \534E\6587\7EC6\9ED1;
 @color: #2196f3;
+@gray: #cccccc;
 
 
 /* base common */
@@ -13,6 +14,42 @@
 	.create-font-size((@n - 2));
 	.f@{n} {
 		font-size: @n * .1rem;
+	}
+	.lh@{n} {
+		line-height: @n * .1rem;
+	}
+}
+.create-margin-padding(@n) when (@n > 0) {
+	.create-margin-padding((@n - 5));
+	.p@{n} {
+		padding: @n * .1rem;
+	}
+	.pt@{n} {
+		padding-top: @n * .1rem;
+	}
+	.pr@{n} {
+		padding-right: @n * .1rem;
+	}
+	.pb@{n} {
+		padding-bottom: @n * .1rem;
+	}
+	.pl@{n} {
+		padding-left: @n * .1rem;
+	}
+	.m@{n} {
+		margin: @n * .1rem;
+	}
+	.mt@{n} {
+		margin-top: @n * .1rem;
+	}
+	.mr@{n} {
+		margin-right: @n * .1rem;
+	}
+	.mb@{n} {
+		margin-bottom: @n * .1rem;
+	}
+	.ml@{n} {
+		margin-left: @n * .1rem;
 	}
 }
 .transition(@time, @delay:0s) {
@@ -81,8 +118,14 @@ a {
 .ar {
 	text-align: right;
 }
+.ov {
+	overflow: hidden;
+}
+.block {
+	display: block;
+}
 
-
+.create-margin-padding(30);
 .create-font-size(30);
 
 
@@ -143,6 +186,53 @@ a {
 }
 .content {
 	.w();
-	max-width: 700px;
+	max-width: 620px;
+	padding: 0 15px;
 	margin: 0 auto;
+}
+.all-con {
+	.w();
+	margin-top: 3rem;
+}
+.spinner {
+	width: 3.6rem;
+	height: 3.6rem;
+	position: relative;
+	margin: 1rem auto;
+}
+.double-bounce1, .double-bounce2 {
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+	background-color: @color;
+	opacity: 0.6;
+	position: absolute;
+	top: 0;
+	left: 0;
+	-webkit-animation: bounce 2.0s infinite ease-in-out;
+	animation: bounce 2.0s infinite ease-in-out;
+}
+.double-bounce2 {
+	-webkit-animation-delay: -1.0s;
+	animation-delay: -1.0s;
+}
+@-webkit-keyframes bounce {
+	0%, 100% { -webkit-transform: scale(0.0) }
+	50% { -webkit-transform: scale(1.0) }
+}
+ 
+@keyframes bounce {
+	0%, 100% {
+		transform: scale(0.0);
+		-webkit-transform: scale(0.0);
+  } 50% {
+		transform: scale(1.0);
+		-webkit-transform: scale(1.0);
+	}
+}
+.reload {
+	padding-bottom: .2rem;
+	color: #999999;
+	cursor: pointer;
+	border-bottom: 1px solid @gray;
 }
