add common stylesheet

--- a/less/common.less
+++ b/less/common.less
@@ -291,3 +291,17 @@ a {
 		-webkit-transform: scale(1.2);
 	}
 }
+
+.tags-label {
+	font-size: 1.6rem;
+	display: inline-block;
+	padding: .3rem .8rem;
+	font-weight: 600;
+	box-shadow: inset 0 -1px 0 rgba(0,0,0,0.12);
+	color: #332a28;
+	border-radius: 3px;
+	margin-right: 1.2rem;
+}
+.tags-label:last-child {
+	margin: 0;
+}
