--- a/less/common.less
+++ b/less/common.less
@@ -300,8 +300,8 @@ a {
 	box-shadow: inset 0 -1px 0 rgba(0,0,0,0.12);
 	color: #332a28;
 	border-radius: 3px;
-	margin-right: 1.2rem;
+	margin-left: 1.2rem;
 }
-.tags-label:last-child {
+.tags-label:first-child {
 	margin: 0;
 }
