--- a/less/common.less
+++ b/less/common.less
@@ -68,6 +68,7 @@ html,body,div,h1,h2,h3,h4,h5,h6,p,span,a,ul,li,input,button,textarea {
 	margin: 0;
 	padding: 0;
 	font-size: 62.5%;
+	color: #222222;
 }
 html,body {
 	.w();
@@ -126,6 +127,9 @@ a {
 }
 .none {
 	display: none;
+}
+.black {
+	color: #222222;
 }
 
 .create-margin-padding(30);
