update common stylesheet

--- a/less/common.less
+++ b/less/common.less
@@ -99,6 +99,10 @@ a {
 	text-decoration: none;
 	color: @color;
 }
+del {
+	text-decoration: line-through;
+	color: #999999;
+}
 .b {
 	.w();
 	height: 2rem;
