--- a/less/common.less
+++ b/less/common.less
@@ -10,6 +10,11 @@
 .w() {
 	width: 100%;
 }
+.bbox() {
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+}
 .create-font-size(@n) when (@n >= 12) {
 	.create-font-size((@n - 2));
 	.f@{n} {
@@ -134,6 +139,11 @@ del {
 }
 .black {
 	color: #222222;
+}
+.bbox {
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
 }
 
 .create-margin-padding(30);
@@ -312,4 +322,52 @@ del {
 }
 .tags-label:first-child {
 	margin: 0;
+}
+
+.search {
+	.w();
+	position: relative;
+	margin-bottom: 6rem;
+	&:before {
+		content: '';
+		width: 1.5rem;
+		height: 1.5rem;
+		position: absolute;
+		border: 3px solid @gray;
+		border-radius: 100%;
+		top: 1.1rem;
+		left: 1.5rem;
+		.bbox();
+	};
+	&:after {
+		content: '';
+		width: 3px;
+		height: .9rem;
+		background-color: @gray;
+		position: absolute;
+		top: 2.1rem;
+		left: 2.9rem;
+		transform: rotate(-45deg);
+		-webkit-transform: rotate(-45deg);
+		-moz-transform: rotate(-45deg);
+	};
+	input {
+		.w();
+		border: 0;
+		border-radius: 2rem;
+		padding: .5rem 3rem .5rem 4.5rem;
+		background: #eeeeee;
+		height: 4rem;
+		line-height: 4rem;
+		.transition(.3s);
+		&:focus {
+			/*background: @gray;*/
+			@blur: 1rem;
+			@spread: 1px;
+			@alpha: .1;
+			box-shadow: 0 0 @blur @spread rgba(0,0,0,@alpha) inset;
+			-webkit-box-shadow: 0 0 @blur @spread rgba(0,0,0,@alpha) inset;
+			-moz-box-shadow: 0 0 @blur @spread rgba(0,0,0,@alpha) inset;
+		};
+	};
 }
