--- a/less/common.less
+++ b/less/common.less
@@ -190,7 +190,7 @@ del {
 			transform: scaleX(0);
 			.transition(.2s);
 		};
-		&:after {
+		/*&:after {
 			content: '';
 			.w();
 			height: 0px;
@@ -198,7 +198,7 @@ del {
 			bottom: -1px;
 			left: 0;
 			border-top: 2px dotted #666666;
-		};
+		};*/
 	};
 }
 .header {
