--- a/less/common.less
+++ b/less/common.less
@@ -399,6 +399,11 @@ del {
 	list-style: circle inside;
 	padding: 0;
 }
+.views img {
+	display: block;
+	margin: 0 auto;
+	max-width: 100%;
+}
 
 .article-pt80 {
 	padding-top: 8rem;
