--- a/less/common.less
+++ b/less/common.less
@@ -210,9 +210,10 @@ del {
 }
 .content {
 	.w();
-	max-width: 620px;
+	max-width: 650px;
 	padding: 0 15px;
 	margin: 0 auto;
+	.bbox();
 }
 .all-con {
 	.w();
