--- a/less/common.less
+++ b/less/common.less
@@ -400,6 +400,10 @@ del {
 	list-style: circle inside;
 	padding: 0;
 }
+.views li p {
+	display: inline-block;
+	text-indent: 0px;
+}
 .views img {
 	display: block;
 	margin: 0 auto;
