--- a/less/common.less
+++ b/less/common.less
@@ -148,6 +148,9 @@ del {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 }
+.gray {
+	color: #999999;
+}
 
 .create-margin-padding(30);
 .create-font-size(30);
@@ -296,7 +299,7 @@ del {
 	};
 }
 .list-view {
-	text-indent: 2.8rem;
+	/*text-indent: 2.8rem;*/
 	text-align: justify;
 }
 
@@ -402,7 +405,7 @@ del {
 }
 .views li p {
 	display: inline-block;
-	text-indent: 0px;
+	/*text-indent: 0px;*/
 }
 .views img {
 	display: block;
@@ -431,7 +434,7 @@ del {
 	margin-bottom: 1.5rem;
 }
 .views blockquote p {
-	text-indent: 0rem;
+	/*text-indent: 0rem;*/
 	color: #777777;
 	line-height: 2rem;
 }
