--- a/less/common.less
+++ b/less/common.less
@@ -65,14 +65,15 @@
 	-ms-transition: @time all ease-in-out @delay;
 }
 
-
+html {
+	font-size: 62.5%;
+}
 html,body,div,h1,h2,h3,h4,h5,h6,p,span,a,ul,li,input,button,textarea {
 	font-family: 'PT serif', @font-family-1, @font-family-2, @font-family-3, Microsoft Yahei, Hiragino Sans GB, sans-serif, Arial;
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
 	outline: none;
 	margin: 0;
 	padding: 0;
-	font-size: 62.5%;
 	color: #222222;
 }
 html,body {
