--- a/less/common.less
+++ b/less/common.less
@@ -462,3 +462,14 @@ del {
 .article-pt80 {
 	padding-top: 8rem;
 }
+
+
+.abt {
+	height: 6rem;
+	line-height: 3rem;
+	margin-top: -3rem;
+}
+
+.search-ol {
+	.w();
+}
