update highlight css theme

--- a/less/common.less
+++ b/less/common.less
@@ -433,9 +433,10 @@ del {
 	margin: 1.5rem 0;
 }
 .views pre code {
-	padding: 1.2rem;
+	padding: 1.5rem;
 	border-radius: 6px;
 	font-size: 87.5%;
+	background: #23241f;
 	.bbox();
 	&:before {
 		content: '';
@@ -446,6 +447,9 @@ del {
 }
 .views pre code span {
 	font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
+}
+code span {
+	color: #ffffff;
 }
 .views blockquote {
 	padding: 0 1rem;
