--- a/less/common.less
+++ b/less/common.less
@@ -288,7 +288,7 @@ del {
 	box-shadow: inset 0 -1px 0 rgba(0,0,0,0.12);
 }
 .list-time {
-	background-color: @gray;
+	background-color: #eeeeee;
 	border-top-left-radius: 2px;
 	border-bottom-left-radius: 2px;
 }
