--- a/less/common.less
+++ b/less/common.less
@@ -176,8 +176,10 @@ del {
 	height: 12rem;
 	border-radius: 100%;
 	margin: 0 auto;
-	background: url(../img/avatar.jpg) no-repeat center;
-	background: -webkit-image-set(url(../img/avatar.jpg) 1x,url(../img/avatar@2x.jpg) 2x) no-repeat center;
+	/*background: url(../img/avatar.jpg) no-repeat center;*/
+	background: url('http://ww2.sinaimg.cn/large/005EkSOcgw1f97ui9bbhyj303c03ca9y.jpg') no-repeat center;
+	/*background: -webkit-image-set(url(../img/avatar.jpg) 1x,url(../img/avatar@2x.jpg) 2x) no-repeat center;*/
+	background: -webkit-image-set(url('http://ww2.sinaimg.cn/large/005EkSOcgw1f97ui9bbhyj303c03ca9y.jpg') 1x,url('http://ww1.sinaimg.cn/large/005EkSOcgw1f97uibuxtlj306o06o3yr.jpg') 2x) no-repeat center;
 	background-size: 100%;
 }
 .master {
@@ -315,9 +317,9 @@ del {
 	position: relative;
 	.transition(.3s);
 	&:hover {
-		color: #222222;
+		color: #666666;
 	};
-	&:before {
+	/*&:before {
 		content: '';
 		width: 100%;
 		height: 1px;
@@ -325,7 +327,7 @@ del {
 		left: 0;
 		bottom: 0;
 		background-color: #333333;
-		visibility: visible;
+		visibility: hidden;
 		transform: scaleX(0);
 		.transition(.25s);
 	};
@@ -337,7 +339,7 @@ del {
 		right: 0;
 		bottom: -3px;
 		background-color: #333333;
-		visibility: visible;
+		visibility: hidden;
 		transform: scaleX(0);
 		.transition(.25s);
 	};
@@ -348,7 +350,7 @@ del {
 	&:hover:after {
 		visibility: visible;
 		transform: scaleX(1);
-	};
+	};*/
 }
 
 .load-before-animation {
