--- a/less/common.less
+++ b/less/common.less
@@ -545,7 +545,7 @@ code span {
 	opacity: 0;
 	filter: alpha(opacity=0);
 	display: none;
-	overflow-y: scroll;
+	/*overflow-y: scroll;*/
 }
 
 .alipay,.WeChat {
