--- a/less/common.less
+++ b/less/common.less
@@ -493,10 +493,12 @@ del {
 	margin: 1.5rem 0;
 }
 .views pre code {
+	font-family: Menlo, Bitstream Vera Sans Mono, DejaVu Sans Mono, Monaco, Consolas, monospace;
 	padding: 1.5rem;
 	border-radius: 6px;
-	font-size: 87.5%;
-	background: #23241f;
+	font-size: 81.2%;
+	line-height: 1.8rem;
+	background: #3f3f3f;
 	.bbox();
 	&:before {
 		content: '';
@@ -506,7 +508,8 @@ del {
 	};
 }
 .views pre code span {
-	font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
+	/*font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;*/
+	font-family: Menlo, Bitstream Vera Sans Mono, DejaVu Sans Mono, Monaco, Consolas, monospace;
 }
 code span {
 	color: #ffffff;
@@ -614,4 +617,28 @@ code span {
 .alipay.in,.WeChat.in {
 	opacity: 1;
 	filter: alpha(opacity=100);
+}
+
+.loading {
+	position: absolute;
+	width: 100%;
+	height: 2rem;
+	line-height: 2rem;
+	top: 50%;
+	left: 0;
+	margin: -1rem 0 0 0;
+	font-size: 2rem;
+	color: #ccc;
+}
+.logs code {
+	background-color: #86b558;
+	color: #ffffff;
+	font-size: 1.2rem;
+	padding: .36rem 0;
+}
+.react-link,.ng2-link {
+	width: 100%;
+	position: absolute;
+	bottom: 5rem;
+	color: #666666;
 }
