--- a/less/common.less
+++ b/less/common.less
@@ -177,9 +177,11 @@ del {
 	border-radius: 100%;
 	margin: 0 auto;
 	/*background: url(../img/avatar.jpg) no-repeat center;*/
-	background: url('http://ww2.sinaimg.cn/large/005EkSOcgw1f97ui9bbhyj303c03ca9y.jpg') no-repeat center;
 	/*background: -webkit-image-set(url(../img/avatar.jpg) 1x,url(../img/avatar@2x.jpg) 2x) no-repeat center;*/
-	background: -webkit-image-set(url('http://ww2.sinaimg.cn/large/005EkSOcgw1f97ui9bbhyj303c03ca9y.jpg') 1x,url('http://ww1.sinaimg.cn/large/005EkSOcgw1f97uibuxtlj306o06o3yr.jpg') 2x) no-repeat center;
+	/*background: url('http://ww2.sinaimg.cn/large/005EkSOcgw1f97ui9bbhyj303c03ca9y.jpg') no-repeat center;*/
+	/*background: -webkit-image-set(url('http://ww2.sinaimg.cn/large/005EkSOcgw1f97ui9bbhyj303c03ca9y.jpg') 1x,url('http://ww1.sinaimg.cn/large/005EkSOcgw1f97uibuxtlj306o06o3yr.jpg') 2x) no-repeat center;*/
+	background: url('http://ww3.sinaimg.cn/large/005EkSOcgw1faj7zd5os8j303c03cmy0.jpg') no-repeat center;
+	background: -webkit-image-set(url('http://ww3.sinaimg.cn/large/005EkSOcgw1faj7zd5os8j303c03cmy0.jpg') 1x,url('http://ww1.sinaimg.cn/large/005EkSOcgw1faj7zddiurj306o06ojtj.jpg') 2x) no-repeat center;
 	background-size: 100%;
 }
 .master {
