update stylesheets for less

--- a/src/less/stylesheet@2.0.less
+++ b/src/less/stylesheet@2.0.less
@@ -153,13 +153,88 @@ del {
 .create-font-size(30);
 
 .home-cot {
-  .wrap();
   top: 0;
   left: 0;
   right: 0;
-  bottom: 30%;
-  background-image: linear-gradient(180deg, #1F2D3D, #475669);
+  bottom: 0;
+  /*background-image: linear-gradient(180deg, #1F2D3D, #475669);*/
 }
+.home-start {
+  .wrap();
+  height: 100%;
+  background-color: #28333d;
+}
+.home-loading {
+  color: #fff;
+  width: 10rem;
+  height: 5rem;
+  top: 50%;
+  left: 50%;
+  margin: -2.5rem 0 0 -5rem;
+}
+.home-loading > strong {
+  line-height: 2rem;
+  padding-top: 1rem;
+  display: inline-block;
+  -webkit-animation: loading 1.2s infinite ease-in-out;
+  animation: loading 1.2s infinite ease-in-out;
+}
+
+@loadingX: 3px;
+@-webkit-keyframes loading {
+  0%, 10%, 15% { -webkit-transform: translateX(-1 * @loadingX) }
+  5%, 20% { -webkit-transform: translateX(@loadingX) }
+  25%, 100% { -webkit-transform: translateX(0px) }
+}
+@keyframes loading {
+  0%, 10%, 15% {
+    transform: translateX(-1 * @loadingX);
+    -webkit-transform: translateX(-1 * @loadingX);
+  } 5%, 20% {
+    transform: translateX(@loadingX);
+    -webkit-transform: translateX(@loadingX);
+  } 25%, 100% {
+    transform: translateX(0px);
+    -webkit-transform: translateX(0px);
+  }
+}
+.home-loading > span {
+  display: inline-block;
+  width: 8rem;
+  height: .5rem;
+  border: 1px solid #fff;
+  border-radius: 6px;
+  position: relative;
+  overflow: hidden;
+  &:after {
+    .wrap();
+    height: 100%;
+    content: '';
+    display: block;
+    background-color: #fff;
+  };
+}
+.home-top {
+  .wrap();
+  height: 70%;
+  background: -webkit-linear-gradient(180deg, #6190E8, #A7BFE8);
+  background: linear-gradient(180deg, #6190E8, #A7BFE8);
+}
+.home-bg(@i, @c, @h) {
+  .home-bg-@{i} {
+    background: @c; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, @c , @h); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, @c , @h); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  }
+}
+/*.home-bg(1, #43c6ac, #f8ffae);
+.home-bg(2, #ffafbd, #ffc3a0);
+.home-bg(3, #ff7e5f, #feb47b);
+.home-bg(4, #e96443, #904e95);
+.home-bg(5, #00d2ff, #928dab);
+.home-bg(6, #ff5f6d, #ffc371);
+.home-bg(7, #eecda3, #ef629f);*/
+
 .avatar {
   width: 3rem;
   height: 3rem;
