--- a/src/less/nprogress.less
+++ b/src/less/nprogress.less
@@ -1,10 +1,13 @@
 /* Make clicks pass-through */
+@color: #7bcda3;
+@default: #29d;
+
 #nprogress {
   pointer-events: none;
 }
 
 #nprogress .bar {
-  background: #29d;
+  background: @color;
 
   position: fixed;
   z-index: 1031;
@@ -22,7 +25,7 @@
   right: 0px;
   width: 100px;
   height: 100%;
-  box-shadow: 0 0 10px #29d, 0 0 5px #29d;
+  box-shadow: 0 0 10px @color, 0 0 5px @color;
   opacity: 1.0;
 
   -webkit-transform: rotate(3deg) translate(0px, -4px);
@@ -45,8 +48,8 @@
   box-sizing: border-box;
 
   border: solid 2px transparent;
-  border-top-color: #29d;
-  border-left-color: #29d;
+  border-top-color: @color;
+  border-left-color: @color;
   border-radius: 50%;
 
   -webkit-animation: nprogress-spinner 400ms linear infinite;
