--- a/src/less/stylesheet@2.0.less
+++ b/src/less/stylesheet@2.0.less
@@ -2,7 +2,7 @@
 @font-family-1: \5FAE\8EDF\6B63\9ED1\9AD4;
 @font-family-2: \5FAE\8F6F\96C5\9ED1;
 @font-family-3: \534E\6587\7EC6\9ED1;
-@color: #7bcda3;
+@color: #1F2D3D;
 @gray: #cccccc;
 
 /* base common */
@@ -152,10 +152,10 @@ del {
 .create-font-size(30);
 
 .nav {
-  padding: 50px 0 0 50px;
+  padding: 50px 0;
 }
 .nav > li{
-  padding: 3px 15px;
+  padding: 20px 15px;
   letter-spacing: 2px;
 }
 
@@ -164,6 +164,7 @@ del {
   left: 0;
   right: 0;
   bottom: 0;
+  background-color: #EFF2F7;
   /*background: linear-gradient(180deg, #1F2D3D, #475669);*/
 }
 .home-top {
@@ -189,10 +190,15 @@ del {
 .home-bg(6, #ff5f6d, #ffc371);
 .home-bg(7, #eecda3, #ef629f);*/
 
-.home-top a {
-  color: #fff;
+.home-nav {
+  width: 200px;
+  height: 100%;
 }
-
+.home-ah {
+  position: relative;
+  left: 0;
+  bottom: 20px;
+}
 .avatar {
   width: 3rem;
   height: 3rem;
