update nav page view

--- a/src/less/stylesheet@2.0.less
+++ b/src/less/stylesheet@2.0.less
@@ -197,17 +197,20 @@ del {
 .nav {
   /*padding: 50px 0;*/
 }
-.nav > li{
+.nav-item{
   .wrap();
   .bbox();
   letter-spacing: 2px;
-  height: 7rem;
-  padding: 2rem 1.5rem;
+  height: 50px;
+  padding: 10px;
+  margin-bottom: 2rem;
 }
-.nav > li > a {
-  height: 3rem;
+.nav-item > a {
+  height: 30px;
   display: inline-block;
-  line-height: 3rem;
+  line-height: 30px;
+  position: relative;
+  top: -5px;
 }
 .avatar {
   width: 6rem;
