--- a/src/less/stylesheet@2.0.less
+++ b/src/less/stylesheet@2.0.less
@@ -187,6 +187,9 @@ del {
 .home-nav {
   width: 300px;
   height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 .header {
@@ -202,8 +205,26 @@ del {
   .bbox();
   letter-spacing: 2px;
   height: 50px;
-  padding: 10px;
-  margin-bottom: 2rem;
+  padding: 10px 10px 10px 65px;
+  margin-bottom: 5px;
+  .transition(.3s);
+  &:hover {
+    padding-left: 70px;
+  };
+  &:before {
+    content: '';
+    width: 5px;
+    height: 50px;
+    position: absolute;
+    top: 0;
+    left: -5px;
+    background-color: @color;
+    .transition(.3s);
+  };
+  &:hover:before {
+    background-color: @fontc;
+    left: 0;
+  };
 }
 .nav-item > a {
   height: 30px;
